@@ -2,23 +2,28 @@ package com.thentrees.gymhealthtech.service.impl;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import com.thentrees.gymhealthtech.common.PlanSourceType;
-import com.thentrees.gymhealthtech.common.PlanStatusType;
-import com.thentrees.gymhealthtech.common.SessionStatus;
 import com.thentrees.gymhealthtech.dto.request.*;
 import com.thentrees.gymhealthtech.dto.response.*;
+import com.thentrees.gymhealthtech.enums.PlanSourceType;
+import com.thentrees.gymhealthtech.enums.PlanStatusType;
+import com.thentrees.gymhealthtech.enums.SessionStatus;
+import com.thentrees.gymhealthtech.exception.BusinessException;
 import com.thentrees.gymhealthtech.exception.ResourceNotFoundException;
 import com.thentrees.gymhealthtech.exception.ValidationException;
 import com.thentrees.gymhealthtech.model.*;
+import com.thentrees.gymhealthtech.mapper.ExerciseMapper;
+import com.thentrees.gymhealthtech.mapper.PlanMapper;
+import com.thentrees.gymhealthtech.mapper.common.PrescriptionMapper;
 import com.thentrees.gymhealthtech.repository.*;
 import com.thentrees.gymhealthtech.service.CustomPlanService;
+import java.time.LocalDate;
 import java.util.*;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -30,31 +35,31 @@ public class CustomPlanServiceImpl implements CustomPlanService {
   private final PlanDayRepository planDayRepository;
   private final PlanItemRepository planItemRepository;
   private final ExerciseRepository exerciseRepository;
-  private final UserRepository userRepository;
   private final SessionRepository sessionRepository;
-  private final ObjectMapper objectMapper;
+  private final PlanMapper planMapper;
+  private final ExerciseMapper exerciseMapper;
+  private final PrescriptionMapper prescriptionMapper;
+  private final GoalRepository goalRepository;
+
 
   @Override
+  @Transactional(readOnly = true)
   public PagedResponse<PlanSummaryResponse> getAllPlansForUser(
-      UUID userId, PlanSearchRequest searchCriteria, Pageable pageable) {
-    // This method can be implemented to fetch all plans for a user if needed
-    log.info("Searching plans for user {} with criteria: {}", userId, searchCriteria);
+    Authentication authentication, PlanSearchRequest searchCriteria, Pageable pageable) {
+
+    User user = (User) authentication.getPrincipal();
 
     // This would use a custom repository method with dynamic query building
-    Page<Plan> plans = planRepository.findPlansWithCriteria(userId, searchCriteria, pageable);
-    Page<PlanSummaryResponse> planResponses = plans.map(this::convertPlanToSummaryResponse);
+    Page<Plan> plans = planRepository.findPlansWithCriteria(user.getId(), searchCriteria, pageable);
+    Page<PlanSummaryResponse> planResponses = plans.map(plan -> planMapper.toSummaryResponse(plan));
     return PagedResponse.of(planResponses);
   }
 
   @Transactional
   @Override
-  public PlanResponse createCustomPlan(String email, CreateCustomPlanRequest request) {
-    log.info("Creating custom plan for user: {} with title: {}", email, request.getTitle());
+  public PlanResponse createCustomPlan(Authentication authentication, CreateCustomPlanRequest request) {
 
-    User user =
-        userRepository
-            .findByEmail(email)
-            .orElseThrow(() -> new ResourceNotFoundException("User not found"));
+    User user = (User) authentication.getPrincipal();
 
     // get all exercise IDs from the request
     Set<UUID> exerciseIds =
@@ -71,15 +76,22 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     if (exerciseMap.size() != exerciseIds.size()) {
       throw new ValidationException("Some exercises not found");
     }
+    Goal goal = null;
+    LocalDate currentDate = LocalDate.now();
+    if (request.getGoalId() != null) {
+      goal = goalRepository.findById(request.getGoalId()).orElse(null);
+    }
 
     // Create the plan
     Plan plan = new Plan();
     plan.setUser(user);
+    plan.setGoal(goal);
     plan.setTitle(request.getTitle());
     plan.setSource(PlanSourceType.CUSTOM);
     plan.setCycleWeeks(request.getCycleWeeks());
-    plan.setStatus(PlanStatusType.ACTIVE); // New plans are DRAFT by default
-
+    plan.setStatus(PlanStatusType.DRAFT); // New plans are DRAFT by default
+    plan.setEndDate(currentDate.plusWeeks(request.getCycleWeeks()));
+    plan.setNotes(request.getNotes());
     plan = planRepository.save(plan);
 
     // Create plan days
@@ -102,7 +114,7 @@ public class CustomPlanServiceImpl implements CustomPlanService {
         planItem.setPlanDay(planDay);
         planItem.setExercise(exercise);
         planItem.setItemIndex(itemRequest.getItemIndex());
-        planItem.setPrescription(convertPrescriptionToJson(itemRequest.getPrescription()));
+        planItem.setPrescription(prescriptionMapper.toJsonNode(itemRequest.getPrescription()));
         planItem.setNotes(itemRequest.getNotes());
 
         planItems.add(planItemRepository.save(planItem));
@@ -111,52 +123,44 @@ public class CustomPlanServiceImpl implements CustomPlanService {
       planDay.setPlanItems(planItems);
       planDays.add(planDay);
     }
-
     plan.setPlanDays(planDays);
-
-    log.info("Successfully created custom plan with ID: {} for user: {}", plan.getId(), email);
-    return convertPlanToResponse(plan, true);
+    int completedSessions = sessionRepository.countCompletedSessionsByPlanId(plan.getId());
+    return planMapper.toResponseWithDetails(plan, completedSessions, true);
   }
 
   @Override
   @Transactional(readOnly = true)
-  public List<PlanResponse> getUserPlans(String email) {
-    log.info("Fetching all plans for user: {}", email);
+  public List<PlanResponse> getUserPlans(Authentication authentication) {
 
-    User user =
-        userRepository
-            .findByEmail(email)
-            .orElseThrow(() -> new ResourceNotFoundException("User not found"));
-
+    User user = (User) authentication.getPrincipal();
     List<Plan> plans = planRepository.findByUserId(user.getId());
-
     return plans.stream()
-        .map(plan -> convertPlanToResponse(plan, true))
-        .collect(Collectors.toList());
+        .map(plan -> {
+          int completedSessions = sessionRepository.countCompletedSessionsByPlanId(plan.getId());
+          return planMapper.toResponseWithDetails(plan, completedSessions, true);
+        })
+      .toList();
   }
 
   @Override
   @Transactional(readOnly = true)
-  public PlanResponse getPlanDetails(UUID userId, UUID planId) {
-    log.info("Fetching plan details for user: {}, plan: {}", userId, planId);
-
+  public PlanResponse getPlanDetails(UUID planId) {
     Plan plan =
         planRepository
-            .findByIdAndUserId(planId, userId)
-            .orElseThrow(() -> new ResourceNotFoundException("Plan not found"));
-
-    return convertPlanToResponse(plan, true);
+            .findById(planId)
+            .orElseThrow(() -> new ResourceNotFoundException("Plan", planId.toString()));
+    int completedSessions = sessionRepository.countCompletedSessionsByPlanId(plan.getId());
+    return planMapper.toResponseWithDetails(plan, completedSessions, true);
   }
 
   @Transactional
   @Override
-  public PlanResponse updatePlan(UUID userId, UUID planId, UpdateCustomPlanRequest request) {
-    log.info("Updating plan {} for user {}", planId, userId);
-
+  public PlanResponse updatePlan(Authentication authentication, UUID planId, UpdateCustomPlanRequest request) {
+    User user = (User) authentication.getPrincipal();
     Plan plan =
         planRepository
-            .findByIdAndUserId(planId, userId)
-            .orElseThrow(() -> new ResourceNotFoundException("Plan not found"));
+            .findById(planId)
+            .orElseThrow(() -> new ResourceNotFoundException("Plan", planId.toString()));
 
     // Update basic fields
     if (request.getTitle() != null) {
@@ -168,24 +172,36 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     }
 
     if (request.getStatus() != null) {
+      if (request.getStatus().equalsIgnoreCase(PlanStatusType.ACTIVE.toString())) {
+        List<Plan> listPlan = planRepository.findByUserId(user.getId());
+        for (Plan planItem : listPlan) {
+          planItem.setStatus(PlanStatusType.PAUSE);
+          planRepository.save(planItem);
+        }
+      }
       plan.setStatus(PlanStatusType.valueOf(request.getStatus()));
     }
 
     plan = planRepository.save(plan);
 
     log.info("Successfully updated plan: {}", planId);
-    return convertPlanToResponse(plan, true);
+    int completedSessions = sessionRepository.countCompletedSessionsByPlanId(plan.getId());
+    return planMapper.toResponseWithDetails(plan, completedSessions, true);
   }
 
   @Transactional
   @Override
-  public void deletePlan(UUID userId, UUID planId) {
-    log.info("Deleting plan {} for user {}", planId, userId);
-
+  public void deletePlan(Authentication authentication, UUID planId) {
+    User user = (User) authentication.getPrincipal();
     Plan plan =
         planRepository
-            .findByIdAndUserId(planId, userId)
-            .orElseThrow(() -> new ResourceNotFoundException("Plan not found"));
+            .findById(planId)
+            .orElseThrow(() -> new ResourceNotFoundException("Plan", planId.toString()));
+
+    // check must your plan
+    if (!plan.getUser().getId().equals(user.getId())) {
+      throw new BusinessException("You can del your plan!");
+    }
 
     // Check if there are any completed sessions
     boolean hasCompletedSessions =
@@ -206,12 +222,11 @@ public class CustomPlanServiceImpl implements CustomPlanService {
   @Transactional
   @Override
   public PlanDayResponse addDayToPlan(
-      UUID userId, UUID planId, CreateCustomPlanDayRequest request) {
-    log.info("Adding day to plan {} for user {}", planId, userId);
+      Authentication authentication, UUID planId, CreateCustomPlanDayRequest request) {
 
     Plan plan =
         planRepository
-            .findByIdAndUserId(planId, userId)
+            .findById(planId)
             .orElseThrow(() -> new ResourceNotFoundException("Plan not found"));
 
     // Validate exercises
@@ -246,7 +261,7 @@ public class CustomPlanServiceImpl implements CustomPlanService {
       planItem.setPlanDay(planDay);
       planItem.setExercise(exercise);
       planItem.setItemIndex(itemRequest.getItemIndex());
-      planItem.setPrescription(convertPrescriptionToJson(itemRequest.getPrescription()));
+      planItem.setPrescription(prescriptionMapper.toJsonNode(itemRequest.getPrescription()));
       planItem.setNotes(itemRequest.getNotes());
 
       planItems.add(planItemRepository.save(planItem));
@@ -255,54 +270,68 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     planDay.setPlanItems(planItems);
 
     log.info("Successfully added day to plan: {}", planId);
-    return convertPlanDayToResponse(planDay, true);
+    int estimatedMinutes = planDay.getPlanItems() != null
+        ? planDay.getPlanItems().stream().mapToInt(this::estimateExerciseDuration).sum()
+        : 0;
+    boolean isCompleted = sessionRepository.existsByPlanDayIdAndStatus(planDay.getId(), SessionStatus.COMPLETED);
+    return planMapper.toPlanDayResponse(planDay, true, estimatedMinutes, isCompleted);
   }
 
   @Transactional
   @Override
-  public void removeDayFromPlan(UUID userId, UUID planId, UUID planDayId) {
-    log.info("Removing day {} from plan {} for user {}", planDayId, planId, userId);
+  public void removeDayFromPlan(Authentication authentication, UUID planId, UUID planDayId) {
+
+    User user = (User) authentication.getPrincipal();
+
+    Plan plan = planRepository.findById(planId).orElseThrow(() -> new ResourceNotFoundException("Plan not found"));
+
 
     PlanDay planDay =
-        planDayRepository
-            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, userId)
-            .orElseThrow(() -> new ResourceNotFoundException("Plan day not found"));
+      planDayRepository
+        .findByIdAndPlanIdAndPlanUserId(planDayId, planId, user.getId())
+        .orElseThrow(() -> new ResourceNotFoundException("Plan", planDayId.toString()));
 
     // Check if day has any completed sessions
     boolean hasCompletedSessions =
-        sessionRepository.existsByPlanDayIdAndStatus(planDayId, SessionStatus.COMPLETED);
+      sessionRepository.existsByPlanDayIdAndStatus(planDayId, SessionStatus.COMPLETED);
 
     if (hasCompletedSessions) {
       throw new ValidationException("Cannot delete day with completed sessions");
     }
-
+    plan.getPlanDays().remove(planDay);
     planDayRepository.delete(planDay);
+
     log.info("Successfully removed day from plan: {}", planDayId);
   }
 
   @Transactional
   @Override
-  public PlanDayResponse getPlanDayDetails(UUID userId, UUID planId, UUID planDayId) {
-    log.info(
-        "Fetching plan day details for user: {}, plan: {}, day: {}", userId, planId, planDayId);
+  public PlanDayResponse getPlanDayDetails(Authentication authentication, UUID planId, UUID planDayId) {
+
+    User user = (User) authentication.getPrincipal();
 
     PlanDay planDay =
         planDayRepository
-            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, userId)
+            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, user.getId())
             .orElseThrow(() -> new ResourceNotFoundException("Plan day not found"));
 
-    return convertPlanDayToResponse(planDay, true);
+    int estimatedMinutes = planDay.getPlanItems() != null
+        ? planDay.getPlanItems().stream().mapToInt(this::estimateExerciseDuration).sum()
+        : 0;
+    boolean isCompleted = sessionRepository.existsByPlanDayIdAndStatus(planDay.getId(), SessionStatus.COMPLETED);
+    return planMapper.toPlanDayResponse(planDay, true, estimatedMinutes, isCompleted);
   }
 
   @Transactional
   @Override
   public PlanDayResponse updatePlanDay(
-      UUID userId, UUID planId, UUID planDayId, UpdatePlanDayRequest request) {
-    log.info("Updating plan day {} for user {}", planDayId, userId);
+      Authentication authentication, UUID planId, UUID planDayId, UpdatePlanDayRequest request) {
+
+    User user = (User) authentication.getPrincipal();
 
     PlanDay planDay =
         planDayRepository
-            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, userId)
+            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, user.getId())
             .orElseThrow(() -> new ResourceNotFoundException("Plan day not found"));
 
     if (request.getSplitName() != null) {
@@ -320,18 +349,23 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     planDay = planDayRepository.save(planDay);
 
     log.info("Successfully updated plan day: {}", planDayId);
-    return convertPlanDayToResponse(planDay, true);
+    int estimatedMinutes = planDay.getPlanItems() != null
+        ? planDay.getPlanItems().stream().mapToInt(this::estimateExerciseDuration).sum()
+        : 0;
+    boolean isCompleted = sessionRepository.existsByPlanDayIdAndStatus(planDay.getId(), SessionStatus.COMPLETED);
+    return planMapper.toPlanDayResponse(planDay, true, estimatedMinutes, isCompleted);
   }
 
   @Transactional
   @Override
   public PlanItemResponse addItemToPlanDay(
-      UUID userId, UUID planId, UUID planDayId, CreateCustomPlanItemRequest request) {
-    log.info("Adding item to plan day {} for user {}", planDayId, userId);
+      Authentication authentication, UUID planId, UUID planDayId, CreateCustomPlanItemRequest request) {
+
+    User user = (User) authentication.getPrincipal();
 
     PlanDay planDay =
         planDayRepository
-            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, userId)
+            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, user.getId())
             .orElseThrow(() -> new ResourceNotFoundException("Plan day not found"));
 
     Exercise exercise =
@@ -343,25 +377,30 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     planItem.setPlanDay(planDay);
     planItem.setExercise(exercise);
     planItem.setItemIndex(request.getItemIndex());
-    planItem.setPrescription(convertPrescriptionToJson(request.getPrescription()));
+    planItem.setPrescription(prescriptionMapper.toJsonNode(request.getPrescription()));
     planItem.setNotes(request.getNotes());
 
     planItem = planItemRepository.save(planItem);
 
     log.info("Successfully added item to plan day: {}", planDayId);
-    return convertPlanItemToResponse(planItem);
+    ExerciseDetailResponse exerciseDetail = planItem.getExercise() != null
+        ? exerciseMapper.toExerciseDetailResponse(planItem.getExercise())
+        : null;
+    int timesCompleted = sessionRepository.countCompletedSessionsByPlanItemId(planItem.getId());
+    return planMapper.toPlanItemResponseWithDetails(planItem, exerciseDetail, timesCompleted);
   }
 
   @Transactional
   @Override
   public PlanItemResponse updatePlanItem(
-      UUID userId, UUID planId, UUID planDayId, UUID planItemId, UpdatePlanItemRequest request) {
-    log.info("Updating plan item {} for user {}", planItemId, userId);
+      Authentication authentication, UUID planId, UUID planDayId, UUID planItemId, UpdatePlanItemRequest request) {
+
+    User user = (User) authentication.getPrincipal();
 
     PlanItem planItem =
         planItemRepository
             .findByIdAndPlanDayIdAndPlanDayPlanIdAndPlanDayPlanUserId(
-                planItemId, planDayId, planId, userId)
+                planItemId, planDayId, planId, user.getId())
             .orElseThrow(() -> new ResourceNotFoundException("Plan item not found"));
 
     if (request.getExerciseId() != null) {
@@ -377,7 +416,7 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     }
 
     if (request.getPrescription() != null) {
-      planItem.setPrescription(convertPrescriptionToJson(request.getPrescription()));
+      planItem.setPrescription(prescriptionMapper.toJsonNode(request.getPrescription()));
     }
 
     if (request.getNotes() != null) {
@@ -387,18 +426,23 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     planItem = planItemRepository.save(planItem);
 
     log.info("Successfully updated plan item: {}", planItemId);
-    return convertPlanItemToResponse(planItem);
+    ExerciseDetailResponse exerciseDetail = planItem.getExercise() != null
+        ? exerciseMapper.toExerciseDetailResponse(planItem.getExercise())
+        : null;
+    int timesCompleted = sessionRepository.countCompletedSessionsByPlanItemId(planItem.getId());
+    return planMapper.toPlanItemResponseWithDetails(planItem, exerciseDetail, timesCompleted);
   }
 
   @Transactional
   @Override
-  public void removePlanItem(UUID userId, UUID planId, UUID planDayId, UUID planItemId) {
-    log.info("Removing plan item {} for user {}", planItemId, userId);
+  public void removePlanItem(Authentication authentication, UUID planId, UUID planDayId, UUID planItemId) {
+
+    User user = (User) authentication.getPrincipal();
 
     PlanItem planItem =
         planItemRepository
             .findByIdAndPlanDayIdAndPlanDayPlanIdAndPlanDayPlanUserId(
-                planItemId, planDayId, planId, userId)
+                planItemId, planDayId, planId, user.getId())
             .orElseThrow(() -> new ResourceNotFoundException("Plan item not found"));
 
     // Check if item has any completed sessions
@@ -417,12 +461,13 @@ public class CustomPlanServiceImpl implements CustomPlanService {
   @Transactional
   @Override
   public void addMultipleItemsToPlanDay(
-      UUID userId, UUID planId, UUID planDayId, AddMultipleItemsRequest request) {
-    log.info("Adding multiple items to plan day {} for user {}", planDayId, userId);
+      Authentication authentication, UUID planId, UUID planDayId, AddMultipleItemsRequest request) {
+
+    User user = (User) authentication.getPrincipal();
 
     PlanDay planDay =
         planDayRepository
-            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, userId)
+            .findByIdAndPlanIdAndPlanUserId(planDayId, planId, user.getId())
             .orElseThrow(() -> new ResourceNotFoundException("Plan day not found"));
 
     // Validate exercises
@@ -447,144 +492,73 @@ public class CustomPlanServiceImpl implements CustomPlanService {
       planItem.setPlanDay(planDay);
       planItem.setExercise(exercise);
       planItem.setItemIndex(itemRequest.getItemIndex());
-      planItem.setPrescription(convertPrescriptionToJson(itemRequest.getPrescription()));
+      planItem.setPrescription(prescriptionMapper.toJsonNode(itemRequest.getPrescription()));
       planItem.setNotes(itemRequest.getNotes());
 
       planItemRepository.save(planItem);
     }
+  }
 
-    log.info(
-        "Successfully added {} items to plan day: {}", request.getPlanItems().size(), planDayId);
+  @Override
+  @Transactional
+  public PlanDay duplicatePlanDayForNextWeek(PlanDay planDay) {
+    if (planDay != null) {
+
+      LocalDate nextScheduledDate = planDay.getScheduledDate().plusWeeks(1);
+      if (nextScheduledDate.isAfter(planDay.getPlan().getEndDate())) {
+        throw new BusinessException("Plan day end date");
+      }
+
+      PlanDay newPlanDay = new PlanDay();
+      newPlanDay.setPlan(planDay.getPlan());
+      newPlanDay.setDayIndex(planDay.getDayIndex() + 7); // Next week
+      newPlanDay.setSplitName(planDay.getSplitName());
+      if (planDay.getScheduledDate() != null) {
+        newPlanDay.setScheduledDate(nextScheduledDate);
+      }
+
+      newPlanDay = planDayRepository.save(newPlanDay);
+
+      List<PlanItem> newPlanItems = new ArrayList<>();
+      if (planDay.getPlanItems() != null) {
+        for (PlanItem item : planDay.getPlanItems()) {
+          PlanItem newItem = new PlanItem();
+          newItem.setPlanDay(newPlanDay);
+          newItem.setExercise(item.getExercise());
+          newItem.setItemIndex(item.getItemIndex());
+          newItem.setPrescription(item.getPrescription());
+          newItem.setNotes(item.getNotes());
+
+          newPlanItems.add(planItemRepository.save(newItem));
+        }
+      }
+
+      newPlanDay.setPlanItems(newPlanItems);
+      return newPlanDay;
+    }
+    return null;
+  }
+
+  @Override
+  public void usePlan(UUID planId) {
+    Plan plan = planRepository.findById(planId)
+      .orElseThrow(() -> new ResourceNotFoundException("Plan", planId.toString()));
+
+    List<PlanDay> planDays = planDayRepository.findAllByPlanId(plan.getId());
+
+    LocalDate currentDate = LocalDate.now();
+    planDays.sort(Comparator.comparingInt(PlanDay::getDayIndex));
+
+    for (int i = 0; i < planDays.size(); i++) {
+      planDays.get(i).setScheduledDate(currentDate.plusDays(i));
+    }
+
+    plan.setEndDate(currentDate.plusWeeks(plan.getCycleWeeks()));
+    plan.setStatus(PlanStatusType.ACTIVE);
+    planRepository.save(plan);
   }
 
   // Helper methods
-  private JsonNode convertPrescriptionToJson(
-      CreateCustomPlanItemRequest.PlanItemPrescription prescription) {
-    ObjectNode node = objectMapper.createObjectNode();
-    node.put("sets", prescription.getSets());
-    node.put("reps", prescription.getReps());
-
-    if (prescription.getRestSeconds() != null) {
-      node.put("restSeconds", prescription.getRestSeconds());
-    }
-    return node;
-  }
-
-  private PlanResponse convertPlanToResponse(Plan plan, boolean includeDetails) {
-    PlanResponse dto = new PlanResponse();
-    dto.setId(plan.getId());
-    dto.setTitle(plan.getTitle());
-    dto.setSource(plan.getSource());
-    dto.setCycleWeeks(plan.getCycleWeeks());
-    dto.setStatus(plan.getStatus());
-
-    // Calculate computed fields
-    if (plan.getPlanDays() != null) {
-      dto.setTotalDays(plan.getPlanDays().size());
-      dto.setTotalExercises(
-          plan.getPlanDays().stream()
-              .mapToInt(day -> day.getPlanItems() != null ? day.getPlanItems().size() : 0)
-              .sum());
-    }
-
-    // Calculate progress
-    int completedSessions = sessionRepository.countCompletedSessionsByPlanId(plan.getId());
-    dto.setCompletedSessions(completedSessions);
-
-    if (dto.getTotalDays() != null && dto.getTotalDays() > 0) {
-      dto.setProgressPercentage((double) completedSessions / dto.getTotalDays() * 100);
-    }
-
-    if (includeDetails && plan.getPlanDays() != null) {
-      List<PlanDayResponse> dayResponses =
-          plan.getPlanDays().stream().map(day -> convertPlanDayToResponse(day, true)).toList();
-      dto.setPlanDays(dayResponses);
-    }
-
-    return dto;
-  }
-
-  private PlanDayResponse convertPlanDayToResponse(PlanDay planDay, boolean includeItems) {
-    PlanDayResponse dto = new PlanDayResponse();
-    dto.setId(planDay.getId());
-    dto.setDayIndex(planDay.getDayIndex());
-    dto.setSplitName(planDay.getSplitName());
-    dto.setScheduledDate(planDay.getScheduledDate());
-    dto.setCreatedAt(planDay.getCreatedAt());
-
-    if (planDay.getPlanItems() != null) {
-      dto.setTotalExercises(planDay.getPlanItems().size());
-
-      // Estimate duration based on sets, reps, and rest times
-      int estimatedMinutes =
-          planDay.getPlanItems().stream().mapToInt(this::estimateExerciseDuration).sum();
-      dto.setEstimatedDurationMinutes(estimatedMinutes);
-
-      if (includeItems) {
-        List<PlanItemResponse> itemDtos =
-            planDay.getPlanItems().stream()
-                .map(this::convertPlanItemToResponse)
-                .collect(Collectors.toList());
-        dto.setPlanItems(itemDtos);
-      }
-    }
-
-    // Check if day is completed
-    dto.setIsCompleted(
-        sessionRepository.existsByPlanDayIdAndStatus(planDay.getId(), SessionStatus.COMPLETED));
-
-    return dto;
-  }
-
-  private PlanItemResponse convertPlanItemToResponse(PlanItem planItem) {
-    PlanItemResponse dto = new PlanItemResponse();
-    dto.setId(planItem.getId());
-    dto.setItemIndex(planItem.getItemIndex());
-    dto.setPrescription(planItem.getPrescription());
-    dto.setNotes(planItem.getNotes());
-    dto.setCreatedAt(planItem.getCreatedAt());
-
-    if (planItem.getExercise() != null) {
-      dto.setExercise(convertExerciseToResponse(planItem.getExercise()));
-    }
-
-    // Performance tracking data
-    dto.setTimesCompleted(sessionRepository.countCompletedSessionsByPlanItemId(planItem.getId()));
-
-    return dto;
-  }
-
-  private ExerciseDetailResponse convertExerciseToResponse(Exercise exercise) {
-    ExerciseDetailResponse dto = new ExerciseDetailResponse();
-    dto.setId(exercise.getId());
-    dto.setSlug(exercise.getSlug());
-    dto.setName(exercise.getName());
-    dto.setPrimaryMuscle(
-        exercise.getPrimaryMuscle() != null
-            ? List.of(exercise.getPrimaryMuscle().getName())
-            : Collections.emptyList());
-    dto.setEquipment(exercise.getEquipment() != null ? exercise.getEquipment().getName() : null);
-    dto.setThumbnailUrl(exercise.getThumbnailUrl());
-    dto.setExerciseCategory(
-        exercise.getExerciseCategory() != null ? exercise.getExerciseCategory().getName() : null);
-    dto.setExerciseType(
-        exercise.getExerciseType() != null ? exercise.getExerciseType().name() : null);
-    dto.setBodyPart(exercise.getBodyPart());
-    if (exercise.getExerciseMuscles() != null) {
-      List<String> secondaryMuscles =
-          exercise.getExerciseMuscles().stream()
-              .map(em -> em.getMuscle().getName())
-              .collect(Collectors.toList());
-      dto.setSecondaryMuscles(secondaryMuscles);
-    } else {
-      dto.setSecondaryMuscles(Collections.emptyList());
-    }
-    dto.setSafetyNotes(exercise.getSafetyNotes());
-    dto.setCreatedAt(exercise.getCreatedAt());
-    dto.setUpdatedAt(exercise.getUpdatedAt());
-    // Add other exercise fields as needed
-    return dto;
-  }
 
   private int estimateExerciseDuration(PlanItem planItem) {
     try {
@@ -600,31 +574,4 @@ public class CustomPlanServiceImpl implements CustomPlanService {
     }
   }
 
-  private PlanSummaryResponse convertPlanToSummaryResponse(Plan plan) {
-    PlanSummaryResponse dto = new PlanSummaryResponse();
-    dto.setId(plan.getId());
-    dto.setTitle(plan.getTitle());
-    dto.setSource(plan.getSource());
-    dto.setCycleWeeks(plan.getCycleWeeks());
-    dto.setStatus(plan.getStatus());
-
-    // Calculate computed fields
-    if (plan.getPlanDays() != null) {
-      dto.setTotalDays(plan.getPlanDays().size());
-      dto.setTotalExercises(
-          plan.getPlanDays().stream()
-              .mapToInt(day -> day.getPlanItems() != null ? day.getPlanItems().size() : 0)
-              .sum());
-    }
-
-    // Calculate progress
-    int completedSessions = sessionRepository.countCompletedSessionsByPlanId(plan.getId());
-    dto.setCompletedSessions(completedSessions);
-
-    if (dto.getTotalDays() != null && dto.getTotalDays() > 0) {
-      dto.setProgressPercentage((double) completedSessions / dto.getTotalDays() * 100);
-    }
-
-    return dto;
-  }
 }
